--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
   },
   "keywords": ["avet", "avetPlugin", "avet-plugin", "antd"],
   "scripts": {
-    "test": "avet-bin dev --rootDir ./test",
+    "test": "avet-bin dev --baseDir ./test/web",
     "build": "avet-bin build",
     "prepublish": "avet-bin build"
   },
   "dependencies": {
-    "antd": "3.1.0",
-    "babel-plugin-import": "1.6.3"
+    "antd": "3.2.3",
+    "babel-plugin-import": "1.6.6"
   },
   "devDependencies": {
-    "avet": "1.0.0-22",
-    "avet-bin": "1.0.0-22",
-    "babel-eslint": "8.1.2",
-    "eslint": "4.15.0",
-    "eslint-config-avet": "0.3.11"
+    "avet": "^1.3.3",
+    "avet-bin": "^1.3.1",
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
+    "eslint-config-avet": "^0.4.3"
   },
   "author": "okoala <dapixp@gmail.com>",
   "engines": {
